samples/_failures_safe/1761549970_1f5fb9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_889a021e.c: In function ‘display_compression_results’:
./samples/SAFE/__tmp_889a021e.c:161:12: error: missing terminating " character
  161 |     printf("Compressed size
      |            ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_889a021e.c:161:5: error: expected expression at end of input
  161 |     printf("Compressed size
      |     ^~~~~~
./samples/SAFE/__tmp_889a021e.c:161:5: error: expected declaration or statement at end of input
